<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings001" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings000_tv01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center_horizontal"
                android:text="@string/settings000_string001"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/s01_sw00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings000_str002"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:thumbTint="#FFFFFF" />

            <TextView
                android:id="@+id/settings000_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center_horizontal"
                android:text="@string/settings001_str004"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s001_tes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str005"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/s001_stes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:max="62"
                android:progress="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str006"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s001_tess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str007"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/settings000_tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center_horizontal"
                android:text="@string/settings001_str008"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s001_tet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str005"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/s001_stet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:max="62"
                android:progress="4" />

            <TextView
                android:id="@+id/settings000_tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str006"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s001_tets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str009"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settings000_tv13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center_horizontal"
                android:text="@string/settings001_str010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings000_tv14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str012"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/s001_pteh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:entries="@array/fonts_array" />

            <TextView
                android:id="@+id/s001_teh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str005"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/s001_steh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:max="92" />

            <TextView
                android:id="@+id/settings000_tv11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str006"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s001_tehs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:text="@string/settings001_str011"
                android:textSize="18sp" />

            <Button
                android:id="@+id/s001_bnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_save"
                android:text="@string/btn_next"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>